--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -82,20 +82,20 @@ TOOL_TABLE = tool.tbl
 [AXIS_0]
 TYPE = LINEAR
 HOME = 0.0
-FERROR = 1.0
+FERROR = 0.5
 MIN_FERROR = 0.05
-MAX_VELOCITY = 100.0
-MAX_ACCELERATION = 0.5
-P = 100
-I = 0
-D = 0
+MAX_VELOCITY = 1.0
+MAX_ACCELERATION = 30.0
+P = 800
+I = 15
+D = 10
 FF0 = 0
-FF1 = 1
+FF1 = 0
 FF2 = 0
 BIAS = 0
-DEADBAND = 0
+DEADBAND = 1e-05
 MAX_OUTPUT = 0
-ENCODER_SCALE = 25500
+ENCODER_SCALE = 25400
 OUTPUT_SCALE = 10
 MIN_LIMIT = -0.001
 MAX_LIMIT = 8.0
@@ -164,6 +164,8 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 2000
+
+
 
 
 
