Add hydraulics panel and MPG tool release

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -26,6 +26,7 @@ MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = gvim
 GEOMETRY = xyz
+PYVCP = hydraulics.xml
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -57,6 +58,7 @@ SERVO_PERIOD = 1000000
 HALUI = halui
 HALFILE = Bosu_Mill.hal
 HALFILE = custom.hal
+POSTGUI_HALFILE = hydraulics.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
 
