--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -65,8 +65,8 @@ SHUTDOWN = shutdown.hal
 [HALUI]
 
 [TRAJ]
-AXES = 3
-COORDINATES = X Y Z
+AXES = 4
+COORDINATES = X Y Z A
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 CYCLE_TIME = 0.010
@@ -154,6 +154,32 @@ MAX_LIMIT = 8.0
 HOME_OFFSET = 0.0
 
 #********************
+# Axis ATC
+#********************
+[AXIS_3]
+TYPE = ANGULAR
+WRAPPED_ROTARY = 1
+HOME = 0.0
+FERROR = 0.5
+MIN_FERROR = 0.05
+MAX_VELOCITY = 1.0
+MAX_ACCELERATION = 30.0
+P = 800
+I = 15
+D = 10
+FF0 = 0
+FF1 = 0
+FF2 = 0
+BIAS = 0
+DEADBAND = 1e-05
+MAX_OUTPUT = 0
+ENCODER_SCALE = 26009.6
+OUTPUT_SCALE = 10
+MIN_LIMIT = -0.001
+MAX_LIMIT = 8.0
+HOME_OFFSET = 0.0
+
+#********************
 # Spindle 
 #********************
 [SPINDLE_9]
@@ -166,9 +192,4 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 2000
-
-
-
-
-
 
