--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -16,7 +16,7 @@ MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
+INCREMENTS = 10in 1in .1in .05in .01in .005in .001in .0005in .0001in
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 0.250000
 MAX_LINEAR_VELOCITY = 1.000000
@@ -159,24 +159,24 @@ HOME_OFFSET = 0.0
 [AXIS_3]
 TYPE = ANGULAR
 WRAPPED_ROTARY = 1
+HOME_USE_INDEX = YES
 HOME = 0.0
-FERROR = 0.5
-MIN_FERROR = 0.05
+FERROR = 100
+MIN_FERROR = 100
 MAX_VELOCITY = 1.0
-MAX_ACCELERATION = 30.0
-P = 800
-I = 15
-D = 10
+MAX_ACCELERATION = 3.0
+P = 0.5
+I = 0
+D = 0
 FF0 = 0
 FF1 = 0
 FF2 = 0
 BIAS = 0
-DEADBAND = 1e-05
-MAX_OUTPUT = 0
-ENCODER_SCALE = 26009.6
-OUTPUT_SCALE = 10
-MIN_LIMIT = -0.001
-MAX_LIMIT = 8.0
+DEADBAND = 1
+OUTPUT_OFFSET = 20.000
+MAX_OUTPUT = 6
+ENCODER_SCALE = 2.844
+OUTPUT_SCALE = 1
 HOME_OFFSET = 0.0
 
 #********************
@@ -192,4 +192,12 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 2000
+
+
+
+
+
+
+
+
 
