Set 7i40 jumper 3 to slow decay, retuned ATC

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -16,7 +16,7 @@ MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-INCREMENTS = 10in 1in .1in .05in .01in .005in .001in .0005in .0001in
+INCREMENTS = 100in 50in 10in 1in .1in .05in .01in .005in .001in .0005in .0001in
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 0.250000
 MAX_LINEAR_VELOCITY = 1.000000
@@ -163,20 +163,20 @@ HOME_USE_INDEX = YES
 HOME = 0.0
 FERROR = 100
 MIN_FERROR = 100
-MAX_VELOCITY = 1.0
-MAX_ACCELERATION = 3.0
-P = 0.5
+MAX_VELOCITY = 1000.0
+MAX_ACCELERATION = 100.0
+P = 1
 I = 0
-D = 0
+D = 0.005
 FF0 = 0
 FF1 = 0
 FF2 = 0
 BIAS = 0
 DEADBAND = 1
-OUTPUT_OFFSET = 20.000
-MAX_OUTPUT = 6
-ENCODER_SCALE = 2.844
-OUTPUT_SCALE = 1
+OUTPUT_OFFSET = 60
+MAX_OUTPUT = 80
+ENCODER_SCALE = 11.377
+OUTPUT_SCALE = 100
 HOME_OFFSET = 0.0
 
 #********************
@@ -192,6 +192,10 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 2000
+
+
+
+
 
 
 
