Tune Y and Z axis

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -113,14 +113,14 @@ FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
-P = 2000
-I = 100
-D = 100
+P = 2500
+I = 0
+D = 18
 FF0 = 0
 FF1 = 0
 FF2 = 0
 BIAS = 0
-DEADBAND = 0.001
+DEADBAND = 1e-05
 MAX_OUTPUT = 0
 ENCODER_SCALE = 25400
 OUTPUT_SCALE = 10
@@ -139,13 +139,13 @@ MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
 P = 2000
-I = 100
-D = 100
+I = 0
+D = 18
 FF0 = 0
 FF1 = 0
 FF2 = 0
 BIAS = 0
-DEADBAND = 0.001
+DEADBAND = 1e-05
 MAX_OUTPUT = 0
 ENCODER_SCALE = -25400
 OUTPUT_SCALE = -10
