Configure limit switch for Y

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -84,6 +84,11 @@ TOOL_TABLE = tool.tbl
 [AXIS_0]
 TYPE = LINEAR
 HOME = 0.0
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = -10
+HOME_LATCH_VEL = 1
+HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = YES
 FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
@@ -100,8 +105,7 @@ MAX_OUTPUT = 0
 ENCODER_SCALE = 25400
 OUTPUT_SCALE = 10
 MIN_LIMIT = -0.001
-MAX_LIMIT = 8.0
-HOME_OFFSET = 0.0
+MAX_LIMIT = 18
 
 #********************
 # Axis Y
@@ -109,6 +113,11 @@ HOME_OFFSET = 0.0
 [AXIS_1]
 TYPE = LINEAR
 HOME = 0.0
+HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = -10
+HOME_LATCH_VEL = 1
+HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = YES
 FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
@@ -126,7 +135,6 @@ ENCODER_SCALE = 25400
 OUTPUT_SCALE = 10
 MIN_LIMIT = -0.001
 MAX_LIMIT = 8.0
-HOME_OFFSET = 0.0
 
 #********************
 # Axis Z
