Adjust homing sequence

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -84,6 +84,7 @@ TOOL_TABLE = tool.tbl
 [AXIS_0]
 TYPE = LINEAR
 HOME = 0.0
+HOME_SEQUENCE = 1
 HOME_OFFSET = 0.0
 HOME_SEARCH_VEL = -10
 HOME_LATCH_VEL = 1
@@ -113,6 +114,7 @@ MAX_LIMIT = 18
 [AXIS_1]
 TYPE = LINEAR
 HOME = 0.0
+HOME_SEQUENCE = 1
 HOME_OFFSET = 0.0
 HOME_SEARCH_VEL = -10
 HOME_LATCH_VEL = 1
@@ -141,7 +143,14 @@ MAX_LIMIT = 8.0
 #********************
 [AXIS_2]
 TYPE = LINEAR
-HOME = 0.0
+HOME = 12.0
+HOME_SEQUENCE = 0
+HOME_OFFSET = 12.25
+HOME_SEARCH_VEL = 10
+HOME_LATCH_VEL = 1
+HOME_FINAL_VEL = 0.5
+HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = YES
 FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
@@ -157,9 +166,8 @@ DEADBAND = 1e-05
 MAX_OUTPUT = 0
 ENCODER_SCALE = -25400
 OUTPUT_SCALE = -10
-MIN_LIMIT = -0.001
-MAX_LIMIT = 8.0
-HOME_OFFSET = 0.0
+MIN_LIMIT = 0.01
+MAX_LIMIT = 12.25
 
 #********************
 # Axis ATC
