ATC Homing bodge. Need to test repeatability

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -175,8 +175,11 @@ MAX_LIMIT = 12.25
 [AXIS_3]
 TYPE = ANGULAR
 WRAPPED_ROTARY = 1
-HOME_USE_INDEX = YES
 HOME = 0.0
+HOME_SEQUENCE = 0
+HOME_OFFSET = 0
+HOME_SEARCH_VEL = 20
+HOME_LATCH_VEL = 10
 FERROR = 100
 MIN_FERROR = 100
 MAX_VELOCITY = 1000.0
