UI tweaks and tool change edit

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -16,9 +16,9 @@ MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-INCREMENTS = 100in 50in 10in 1in .1in .05in .01in .005in .001in .0005in .0001in
+INCREMENTS = 1in .1in .05in .01in .005in .001in .0005in .0001in
 POSITION_FEEDBACK = ACTUAL
-DEFAULT_LINEAR_VELOCITY = 0.250000
+DEFAULT_LINEAR_VELOCITY = 1.0
 MAX_LINEAR_VELOCITY = 1.000000
 MIN_LINEAR_VELOCITY = 0.016670
 DEFAULT_ANGULAR_VELOCITY = 12.000000
@@ -184,8 +184,8 @@ HOME_SEARCH_VEL = 25
 HOME_LATCH_VEL = 5
 FERROR = 100
 MIN_FERROR = 100
-MAX_VELOCITY = 800.0
-MAX_ACCELERATION = 500.0
+MAX_VELOCITY = 500.0
+MAX_ACCELERATION = 800.0
 P = 3
 I = 0
 D = 0.05
