--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -184,21 +184,19 @@ HOME_SEARCH_VEL = 25
 HOME_LATCH_VEL = 5
 FERROR = 100
 MIN_FERROR = 100
-MAX_VELOCITY = 500.0
+MAX_VELOCITY = 200.0
 MAX_ACCELERATION = 800.0
-P = 3
+P = 2.5
 I = 0
-D = 0.005
+D = 0.05
 FF0 = 0
 FF1 = 0.05
-FF2 = 0
+FF2 = 0.02
 BIAS = 0
-DEADBAND = 0.001
-OUTPUT_OFFSET = 60
+DEADBAND = 1e-05
 MAX_OUTPUT = 80
 ENCODER_SCALE = -11.377
 OUTPUT_SCALE = -100
-HOME_OFFSET = 0.0
 
 #********************
 # Spindle 
@@ -213,6 +211,10 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 2000
+
+
+
+
 
 
 
