--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -157,14 +157,14 @@ FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 1.0
 MAX_ACCELERATION = 30.0
-P = 1500
-I = 0
-D = 18
+P = 1400
+I = 10
+D = 19
 FF0 = 0
-FF1 = 23
-FF2 = 0.1
-BIAS = 0
-DEADBAND = 1e-05
+FF1 = 22.7
+FF2 = 0.075
+BIAS = 0.3
+DEADBAND = 0.001
 MAX_OUTPUT = 0
 ENCODER_SCALE = -25400
 OUTPUT_SCALE = -10
@@ -186,9 +186,9 @@ FERROR = 1000
 MIN_FERROR = 100
 MAX_VELOCITY = 200.0
 MAX_ACCELERATION = 150.0
-P = 0.015
-I = 0.1
-D = 0.0005
+P = 0.05
+I = 0.001
+D = 0.0003
 FF0 = 0
 FF1 = 0
 FF2 = 0
@@ -211,6 +211,8 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 5000
+
+
 
 
 
