--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -67,8 +67,8 @@ SHUTDOWN = shutdown.hal
 [HALUI]
 
 [TRAJ]
-AXES = 4
-COORDINATES = X Y Z A
+AXES = 5
+COORDINATES = X Y Z A B
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 CYCLE_TIME = 0.010
@@ -179,6 +179,33 @@ TYPE = ANGULAR
 WRAPPED_ROTARY = 1
 HOME = 256.5
 HOME_OFFSET = 256.5
+HOME_SEQUENCE = 0
+HOME_SEARCH_VEL = 25
+HOME_LATCH_VEL = 5
+FERROR = 1000
+MIN_FERROR = 100
+MAX_VELOCITY = 180.0
+MAX_ACCELERATION = 200.0
+P = 0.12
+I = 0.01
+D = 0.001
+FF0 = 0
+FF1 = 0
+FF2 = 0
+BIAS = 0
+DEADBAND = 1e-05
+MAX_OUTPUT = 100
+ENCODER_SCALE = -11.377
+OUTPUT_SCALE = -10
+
+#********************
+# Axis A
+#********************
+[AXIS_4]
+TYPE = ANGULAR
+WRAPPED_ROTARY = 1
+HOME = 0
+HOME_OFFSET = 0
 HOME_SEQUENCE = 0
 HOME_SEARCH_VEL = 25
 HOME_LATCH_VEL = 5
