--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -68,7 +68,7 @@ SHUTDOWN = shutdown.hal
 
 [TRAJ]
 AXES = 5
-COORDINATES = X Y Z A B
+COORDINATES = X Y Z B A
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 CYCLE_TIME = 0.010
@@ -207,8 +207,8 @@ WRAPPED_ROTARY = 1
 HOME = 0
 HOME_OFFSET = 0
 HOME_SEQUENCE = 0
-HOME_SEARCH_VEL = 25
-HOME_LATCH_VEL = 5
+HOME_SEARCH_VEL = 0
+HOME_LATCH_VEL = 0
 FERROR = 1000
 MIN_FERROR = 100
 MAX_VELOCITY = 180.0
