Tune ATC axis reasonably.

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -186,14 +186,14 @@ FERROR = 1000
 MIN_FERROR = 100
 MAX_VELOCITY = 180.0
 MAX_ACCELERATION = 200.0
-P = 0.465
+P = 0.325
 I = 0
-D = 0.0238
+D = 0.015
 FF0 = 0
-FF1 = 0
-FF2 = 0
+FF1 = 0.019
+FF2 = 0.0055
 BIAS = 0
-DEADBAND = 1e-05
+DEADBAND = 0.1
 MAX_OUTPUT = 100
 ENCODER_SCALE = -11.377
 OUTPUT_SCALE = -432.12
@@ -238,6 +238,12 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 5000
+
+
+
+
+
+
 
 
 
