--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -43,7 +43,7 @@ CYCLE_TIME = 0.010
 [RS274NGC]
 SUBROUTINE_PATH = /home/steve/linuxcnc/configs/Bosu_Mill/
 PARAMETER_FILE = linuxcnc.var
-REMAP = M6 ngc=m6 modalgroup=10
+#REMAP = M6 ngc=m6 modalgroup=10
 
 [EMCMOT]
 EMCMOT = motmod
@@ -157,12 +157,12 @@ FERROR = 0.5
 MIN_FERROR = 0.05
 MAX_VELOCITY = 2.0
 MAX_ACCELERATION = 15.0
-P = 1500
+P = 1600
 I = 0
-D = 8.19
+D = 8.1
 FF0 = 0
-FF1 = 11.75
-FF2 = 0.07
+FF1 = 11.5
+FF2 = 0.06
 BIAS = 0
 DEADBAND = 0.0001
 MAX_OUTPUT = 0
@@ -186,12 +186,12 @@ FERROR = 1000
 MIN_FERROR = 100
 MAX_VELOCITY = 180.0
 MAX_ACCELERATION = 200.0
-P = 75e-9
+P = 0
 I = 0
 D = 6e-10
 FF0 = 0
 FF1 = 9e-10
-FF2 = 45e-11
+FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 100
@@ -238,6 +238,10 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 5000
+
+
+
+
 
 
 
