Tool change defaults to manual set #40=1 for auto

--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -43,7 +43,7 @@ CYCLE_TIME = 0.010
 [RS274NGC]
 SUBROUTINE_PATH = /home/steve/linuxcnc/configs/Bosu_Mill/
 PARAMETER_FILE = linuxcnc.var
-#REMAP = M6 ngc=m6 modalgroup=10
+REMAP = M6 ngc=m6 modalgroup=10
 
 [EMCMOT]
 EMCMOT = motmod
