--- a/Bosu_Mill.ini
+++ b/Bosu_Mill.ini
@@ -11,12 +11,12 @@ DISPLAY = axis
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 2.000000
-MAX_SPINDLE_OVERRIDE = 1.000000
+MAX_SPINDLE_OVERRIDE = 1.500000
 MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
-INTRO_TIME = 5
+INTRO_TIME = 1
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-INCREMENTS = 1in .1in .05in .01in .005in .001in .0005in .0001in
+INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 1.0
 MAX_LINEAR_VELOCITY = 2.000000
@@ -27,6 +27,8 @@ MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = gvim
 GEOMETRY = xyz
 PYVCP = hydraulics.xml
+DEFAULT_SPINDLE_SPEED = 500
+SPINDLE_INCREMENT = 500
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -238,7 +240,6 @@ FF2 = 0
 BIAS = 0
 DEADBAND = 0
 MAX_OUTPUT = 5000
-
 
 
 
